@@ -16,6 +16,8 @@ systemd (204-1) UNRELEASED; urgency=low
     introspection mini-policy.  Closes: #691313
   * The hwdb builtin has replaced pci-db and usb-db in udev. Drop the
     Recommends on pciutils and usbutils accordingly.
+  * Drop our faketime hack. Upstream uses a custom xsl style sheet now to
+    generate the man pages which no longer embeds the build date.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 17 Jul 2013 16:57:58 +0200
 
